# photomap

./: .dockerignore  .eslintrc.js  .gitignore  .jsbeautifyrc  CLAUDE.md  Dockerfile  LICENSE  Pipfile  app.wsgi  app.yaml  appengine_config.py  build.profile.js  fixture.json  karma.conf.js  package-lock.json  package.json  pyproject.toml  resyncdb.py  settings.py  urls.py  wsgi.py
docker/: docker-compose.yml
install/: install-ubuntu-12.04.sh
photomap/: .env  .gitignore  .project  .pydevproject  Pipfile  Readme.txt  __init__.py  app.yaml  clear.sql  environment-sample.py  manage.py  manage_prod.py  prepare_gae.py  registration  requirements.pip  requirements.txt  resyncdb.py  settings.py  settings_appengine.py  settings_gae.py  settings_prod.py  urls.py  wsgi.py
photomap-legacy/: .gitignore  .project  album.dump  album.xml  app.js  convert-photos.pl  convert-schema.pl  scheme.sql
pm/: __init__.py  admin.py  gcs.py  middleware.py  views.py
settings/: __init__.py  common.py  development.py  gcp.py  heroku.py  production.py
templates/: album-share-failure.html  base-interactive.html  base.html  cookie-warning.html  dialog.html  index.html  javascript-warning.html  loading-screen.html  login-form.html  photo-editor.html  registration-form.html  runner.html
terraform/: apis.tf  artifact_registry.tf  cloud_run.tf  iam.tf  outputs.tf  provider.tf  storage.tf  variables.tf
tests/: album.py  apitestcase.py  authentication.py  place.py  registration.py  test_account.py  test_album.py  test_authentication.py  test_dashboard.py  test_firestore_models.py  test_footer.py  (+3 more)
(+1067 files in other folders)
