[project]
name = "photomap"
version = "0.1.0"
description = "Photo map application"
requires-python = ">=3.9"

dependencies = [
    "django==2.1.2",
    "django-appconf==1.0.2",
    "django-compressor==2.2",
    "django-registration==3.0",
    "Pillow>=8.0,<10.0",
    "whitenoise==4.1.4",
    "more-itertools>=7.2.0",
    "gunicorn>=20.0",
]

[tool.uv]
package = false
